# Canvas-MCP-for-students

./: .env.example  .gitignore  README.md  mcp-desktop-config-snippet.json  pyproject.toml  run-canvas-mcp.sh
src/canvas_mcp/: __init__.py  __main__.py  auth.py  browser_login.py  client.py  formatting.py  server.py
src/canvas_mcp/tools/: __init__.py  assignments.py  course_content.py  courses.py  gradescope_bridge.py  learning.py  sources.py  submissions.py
tests/: test_core.py
